# opencl

CNN_on_GPU/: CMakeLists.txt  kernel_source.h  main.cpp
CNN_on_GPU/img/: cat.h  chaise.h  cheval.h  dog.h  dog_shiba.h  dormant.h  drapeau.h  gorille.h  guitariste.h  libellule.h  motard.h  mouette.h  oiseau.h  panda_roux.h  panthere.h  personnes.h  phone.h  poisson.h  rotisserie.h  tigre.h  tinca.h  trilobite.h
filter_2d_optimized/: CMakeLists.txt  filter_2d.h  main.cpp
filter_2d_optimized_RGB/: CMakeLists.txt  kernel_source.h  main.cpp  test_out.h
vadd/: CMakeLists.txt  main.cpp
